<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/quiz"
                    android:fontFamily="@font/myriadpro_bold"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/font_size_22" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/dimen_5"
                    android:gravity="center"
                    android:textColor="@color/textcolor"
                    android:fontFamily="@font/myriadpro_bold"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/quiz_text" />

                <Button
                    android:id="@+id/quiz_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_gravity="center"

                    android:background="@drawable/loginone"
                    android:text="@string/play_quiz"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/post_a_selfie"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/myriadpro_bold"
                    android:textSize="@dimen/font_size_22" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/dimen_5"
                    android:gravity="center"
                    android:lineSpacingExtra="4dp"
                    android:fontFamily="@font/myriadpro_bold"
                    android:textColor="@color/textcolor"
                    android:text="@string/selfie_text" />

                <Button
                    android:id="@+id/selfie_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:background="@drawable/loginone"
                    android:text="@string/take_selfie"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="OpinionPoll"
                    android:fontFamily="@font/myriadpro_bold"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/font_size_22" />

                <Button
                    android:id="@+id/opinion"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:background="@drawable/loginone"
                    android:text="Submmit Option"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>
