<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dimen_40"
        android:src="@drawable/cumi_small" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="70dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/logoboders"
        android:orientation="vertical">
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dimen_20"
        android:orientation="vertical">


        <EditText
            android:id="@+id/email_id_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@drawable/ic_empl_identity"
            android:drawablePadding="@dimen/dimen_10"
            android:hint="@string/empl_id"
            android:inputType="textWebEmailAddress" />

        <EditText
            android:id="@+id/password_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:background="@drawable/edit_text_bg"
            android:drawableLeft="@drawable/ic_lock"
            android:drawablePadding="@dimen/dimen_10"
            android:singleLine="true"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_40"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="@dimen/dimen_10"

            android:background="@drawable/loginone"
            android:text="@string/login"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
    </LinearLayout>
    <include layout="@layout/progress_layout" />
</LinearLayout>
